--- a/app/views/custom/layouts/_footer.html.erb
+++ b/app/views/custom/layouts/_footer.html.erb
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="small-12 large-4 column">
       <h1 class="logo">
-        <%= link_to t("layouts.header.open_gov"), root_path %>
+        <%= link_to "https://pro-ethics.eu", title: t("layouts.footer.framework.link") do %>
+          <%= image_tag "ProEthics.svg", width: "250px", alt: t("layouts.footer.framework.logo") %>
+        <% end %>
       </h1>
 
       <p class="info">
@@ -14,9 +16,9 @@
     </div>
 
     <div class="footer-sections small-12 large-8 column">
-      <div class="small-12 medium-4 column">
-        <%= link_to t("layouts.footer.participation_title"), root_path, class: "title" %>
-        <p><%= t("layouts.footer.participation_text") %></p>
+      <div class="small-12 medium-10 column">
+        <%= image_tag "EU-EC-Logo.jpg", style: "height: 65px !important", alt: t("layouts.footer.funding.logo") %>
+        <p><strong><%= t("layouts.footer.funding.text") %></strong></p>
       </div>
     </div>
   </div>
