--- a/app/views/custom/polls/show.html.erb
+++ b/app/views/custom/polls/show.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div class="expanded poll-more-info">
-    <div class="row margin">
+    <div class="row">
       <div class="small-12 medium-9 column">
         <h3><%= t("polls.show.more_info_title") %></h3>
         <%= auto_link_already_sanitized_html simple_format(@poll.description) %>
