--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,6 +12,11 @@
 
   .question-answer-fields {
     margin-bottom: $line-height;
+
+    &.single-choice .form-error {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
   }
 
   .question-answer {
