--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,6 +13,12 @@
   .question-answer-fields {
     margin-bottom: $line-height;
 
+    &.has-error {
+      legend {
+        color: $alert-color;
+      }
+    }
+
     &.single-choice .form-error {
       margin-top: 0;
       margin-bottom: 0;
