Change custom colors to match the Pro-Ethics theme

--- a/app/assets/stylesheets/_consul_custom_overrides.scss
+++ b/app/assets/stylesheets/_consul_custom_overrides.scss
@@ -11,10 +11,10 @@
 // The variables you can override are defined in the
 // `_settings.scss` and `_consul_settings.scss` files.
 
-$brand: #213b87;
-$brand-secondary: #68c0b5;
+$brand: #c31919;
+$brand-secondary: #e6f2f2;
 $foundation-palette: (
-  primary: #1779ba,
+  primary: #c31919,
   secondary: #767676,
   success: #3adb76,
   warning: #ffae00,
