--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -88,7 +88,7 @@ body:not(.admin) {
 .footer,
 .polls-show-header,
 .poll-more-info {
-  background: #e1f2f0;
+  background: #d2dce1;
 }
 
 .footer {
