Allow guest users adding annotations and comments

--- a/app/views/custom/comments/_comment_tree.html.erb
+++ b/app/views/custom/comments/_comment_tree.html.erb
@@ -11,7 +11,7 @@
           </h2>
         <% end %>
 
-        <% if user_signed_in? %>
+        <% if user_signed_in? || current_user&.guest? %>
           <% if comments_closed_for_commentable?(commentable) %>
             <br>
             <div data-alert class="callout primary">
