--- a/app/views/custom/comments/_comment.html.erb
+++ b/app/views/custom/comments/_comment.html.erb
@@ -89,7 +89,7 @@
             <%= render "comments/responses_count", count: comment.children.size %>
           </span>
 
-          <% if user_signed_in? && !comments_closed_for_commentable?(comment.commentable) && !require_verified_resident_for_commentable?(comment.commentable, current_user) %>
+          <% if (user_signed_in? || current_user&.guest?) && !comments_closed_for_commentable?(comment.commentable) && !require_verified_resident_for_commentable?(comment.commentable, current_user) %>
             <span class="divider">&nbsp;|&nbsp;</span>
             <%= link_to(comment_link_text(comment), "",
                         class: "js-add-comment-link", data: { id: dom_id(comment) }) %>
