Adapt to anonymous users the help gift section
Co-Authored-By: Senen <senenrodero@gmail.com>

--- a/app/views/custom/legislation/processes/_help_gif.html.erb
+++ b/app/views/custom/legislation/processes/_help_gif.html.erb
@@ -7,7 +7,7 @@
       </button>
 
       <div class="dropdown-pane" id="annotator-help" data-dropdown data-auto-focus="true">
-        <% if user_signed_in? %>
+        <% if user_signed_in? || current_user.guest? %>
           <%= t("annotator.help.alt") %>
         <% else %>
           <p>
