Add guest information form to poll page
Co-Authored-By: Senen <senenrodero@gmail.com>

--- a/app/components/custom/guest_information/scroll_to_form_component.html.erb
+++ b/app/components/custom/guest_information/scroll_to_form_component.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row scroll-to-form">
   <div class="small-12 column">
     <div class="float-right">
       <%= link_to "#guest-information-form", class: "button hollow" do %>
