--- a/app/views/custom/polls/show.html.erb
+++ b/app/views/custom/polls/show.html.erb
@@ -14,6 +14,8 @@
 
   <%= render "poll_subnav" %>
 
+  <%= render GuestInformation::ScrollToFormComponent.new %>
+
   <div class="row margin">
     <div class="small-12 medium-9 column">
       <%= render "callout" %>
@@ -111,4 +113,5 @@
       </div>
     <% end %>
   </div>
+  <%= render GuestInformation::FormComponent.new %>
 </div>
