--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -17,6 +17,12 @@
   <%= render "feeds" %>
 
   <div class="row">
+    <div class="column end">
+      <%= sanitize t("welcome.introduction") %>
+    </div>
+  </div>
+
+  <div class="row">
     <% if @cards.any? %>
       <div class="small-12 column <%= "large-8" if feed_processes_enabled? %>">
         <h2 class="title"><%= t("welcome.cards.title") %></h2>
