Do not submit form when the user hits the `Enter` key when writing an answer
It's very discouraging for users to accidentally submit all the poll
answers form when hitting the Enter keyboard while writing an
open answer. This is the default behavior of text inputs, so
instead, we use a text area, which allows new lines, also making
it easier for users to introduce long answers to open questions.

--- a/app/components/custom/poll/answers/fields_component.html.erb
+++ b/app/components/custom/poll/answers/fields_component.html.erb
@@ -15,9 +15,10 @@
         <%= errors_for :answer_id %>
       </fieldset>
     <% else %>
-      <%= answer_form.text_field :open_answer, label: question.title,
-                                               hint: question.description,
-                                               disabled: cannot?(:answer, question.poll) %>
+      <%= answer_form.text_area :open_answer, label: question.title,
+                                              rows: 4,
+                                              hint: question.description,
+                                              disabled: cannot?(:answer, question.poll) %>
     <% end %>
   <% end %>
 </div>
