Adapt poll administration panel to multiple choice questions
* Allow to select the question kind through the admin poll question form
* Do not show answers link for open answers questions
* Do not show question answers information for open answer questions

--- a/app/views/admin/poll/polls/_questions.html.erb
+++ b/app/views/admin/poll/polls/_questions.html.erb
@@ -29,7 +29,7 @@
         </td>
         <td>
           <%= render Admin::TableActionsComponent.new(question) do |actions| %>
-            <%= actions.action(:answers, text: t("admin.polls.show.edit_answers")) %>
+            <%= actions.action(:answers, text: t("admin.polls.show.edit_answers")) unless question.open_answer? %>
           <% end %>
         </td>
       </tr>
