--- a/app/views/custom/admin/poll/questions/_form.html.erb
+++ b/app/views/custom/admin/poll/questions/_form.html.erb
@@ -43,6 +43,12 @@
 
   <div class="row">
     <div class="small-12 medium-6 large-4 column">
+      <%= f.enum_select :kind %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="small-12 medium-6 large-4 column">
       <%= f.check_box :mandatory_answer %>
     </div>
   </div>
