--- a/app/components/custom/poll/answers/fields_component.html.erb
+++ b/app/components/custom/poll/answers/fields_component.html.erb
@@ -6,13 +6,15 @@
         <% if question.description.present? %>
           <span class="help-text"><%= question.description %></span>
         <% end %>
-        <% question.question_answers.each do |answer| %>
-          <div class="question-answer">
-            <%= answer_form.radio_button :answer_id, answer.id, label: answer.title,
-                                                                disabled: cannot?(:answer, question.poll) %>
-          </div>
-        <% end %>
-        <%= errors_for :answer_id %>
+
+        <%= answer_form.collection_radio_buttons(:question_answer_id, question.question_answers, :id, :title) do |b|
+          tag.div class: "question-answer" do
+            b.label do
+              b.radio_button(disabled: cannot?(:answer, question.poll)) + b.text
+            end
+          end
+        end %>
+        <%= errors_for :question_answer_id %>
       </fieldset>
     <% else %>
       <%= answer_form.text_area :open_answer, label: question.title,
